2004-02-20  Kazu Hirata  <kazu@cs.umass.edu>

	* gcc.c (process_command): Allow translation of the copyright
	symbol but not the rest of the copyright message.
	* gcov.c (print_version): Likewise.  Allow translation of the
	message about warranty.

2004-02-19  Aldy Hernandez  <aldyh@redhat.com>
 
        * config/rs6000/spe.md (spe_fixunssfsi2): Rename to
        spe_fixuns_truncsfsi2.
 
        * config/rs6000/rs6000.md (fixunssfsi2): Rename to
        fixuns_truncsfsi2.

2004-02-19  Richard Sandiford  <rsandifo@redhat.com>
	    Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/mips/mips.c (mips_address_insns): Treat BLKmode specially.
	* config/mips/mips.md: Expand comment above unaligned loads and stores.

2004-02-20  Alan Modra  <amodra@bigpond.net.au>

	* function.c (assign_parms): Correct leakage of mainline code
	in last commit.  Also leakage from INIT_CUMULATIVE_ARGS patch.

2004-02-19  Zack Weinberg  <zack@codesourcery.com>

	* config/ia64/ia64.c (ia64_function_arg): In big-endian mode,
	when passing single SFmode quantities in general registers,
	put them in the high half.
	(struct extern_func_list, extern_func_head): Mark with GTY(()).
	(ia64_hpux_add_extern_decl): Save the decl, not the name string.
	Allocate memory with ggc_alloc.  No need to copy anything.
	(ia64_hpux_file_end): Update to match.

2004-02-19  David Daney <ddaney@avtrex.com>

	PR preprocessor/14198
	* config/mips/linux.h (TARGET_OS_CPP_BUILTINS): Add
	builtin_assert ("machine=mips")

2004-02-19  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.md ("*subdf3_cc", "*subdf3_cconly", "*subsf3_cc",
	"*subsf3_cconly"): Subtraction is not commutative.

2004-02-19  Alan Modra  <amodra@bigpond.net.au>

	* function.c (assign_parms): When building decl_rtl for
	SPLIT_COMPLEX_ARGS, ensure inner modes of concat match outer.

2004-02-19  Olivier Hainque  <hainque@act-europe.fr>

	* expr.c (is_aligning_offset): Check if we are aligning the